--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@ body{
     color: #333333;
     background-color: #f0f0f0;
     overflow-x: hidden;
-    padding-bottom: 1000px;
 }
 
 /* Top Style */
@@ -241,6 +240,144 @@ body{
 #content .product .text h3 a{
     color: rgb(85, 85, 85);
 }
+
+/* Breadcrumb Styles */
+
+.breadcrumb{
+    padding: 8px 15px;
+    margin-bottom: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, .5);
+}
+
+.breadcrumb> li + li:before{
+    content: ">\00a0";
+    color: #ccc;
+}
+
+@media(max-width:990px){
+    .breadcrumb{
+        padding: 8px 0;
+        text-align: center;
+    }
+}
+
+/* Products Categories & Categories Styles */
+
+#content .panel.sidebar-menu{
+    box-sizing: border-box;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, .2);
+}
+
+#content .panel.sidebar-menu ul.nav.category-menu{
+    margin-bottom: 20px;
+}
+
+#content .panel.sidebar-menu ul.nav.category-menu li a{
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+#content .panel.sidebar-menu h3{
+    padding: 5px 0px;
+    margin: 0px;
+}
+
+/* Shop Products Tyles */
+
+@media(max-width:760px){
+    .center-responsive{
+        width: 70%;
+        margin: 0px auto;
+    }
+}
+
+@media(max-width:550px){
+    .center-responsive{
+        width: 95%;
+        margin: 0px auto;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Footer Styles */
+
+#footer{
+    background-color: #e0e0e0;
+    padding: 20px 0;
+}
+
+#footer a{
+    color: #999999;
+    padding: 0;
+    text-decoration: none;
+}
+
+#footer a:hover{
+    color: #666666;
+}
+
+#footer ul{
+    list-style: none;
+    padding-left: 0;
+}
+
+#footer .social{
+    text-align: left;
+}
+
+#footer .social a{
+    margin: 0 10px 0 0;
+    display: inline-block;
+    color: #ffffff;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    line-height: 30px;
+    font-size: 15px;
+    text-align: center;
+    vertical-align: bottom;
+    background-color: #555555;
+    text-decoration: none;
+}
+
+#footer .social a:hover{
+    color: #dedede;
+    background-color: #777777;
+}
+
+/* Copyright Styles */
+
+#copyright{
+    background-color: #333333;
+    color: #cccccc;
+    padding: 20px 0;
+    font-size: 12px;
+}
+
+#copyright p{
+    margin: 0;
+}
+
+
 
 
 
